--- a/liveWallpaperWaterfall/src/main/res/xml/mywallpaper.xml
+++ b/liveWallpaperWaterfall/src/main/res/xml/mywallpaper.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/wallpaper_description"
-    android:settingsActivity="com.km.livewallpaperwaterfall.SettingsActivity"
+    android:settingsActivity="com.km.waterfallLWP.SettingsActivity"
     android:thumbnail="@drawable/ic_launcher" />
